<resources>
    <string name="app_name">repaso_pmdm</string>

    <!-- U2A1 -->

    <string name="u2a1StrBtnPlay">play</string>
    <string name="u2a1StrBtnReset">reset</string>

    <!-- U2A2 -->

    <string name="u2a2strBtnStart"> START</string>
    <string name="u2a2strCheckBox"> CHECKED BLACK, UNCHECKED WHITE</string>

    <!-- U2A3 PROPINATRON 2000 -->

    <string name="u2a3strBtnNum1"> 1 </string>
    <string name="u2a3strBtnNum2"> 2 </string>
    <string name="u2a3strBtnNum3"> 3 </string>
    <string name="u2a3strBtnNum4"> 4 </string>
    <string name="u2a3strBtnNum5">5  </string>
    <string name="u2a3strBtnNum6">6 </string>
    <string name="u2a3strBtnNum7">7 </string>
    <string name="u2a3strBtnNum8"> 8</string>
    <string name="u2a3strBtnNum9">9 </string>
    <string name="u2a3strBtnNum0"> 0</string>
    <string name="u2a3strBtnBorrar"> DEL </string>
    <string name="u2a3btnStrCalcularPropina">CALCULAR PROPINA </string>
    <string name="u2a3strRbButtonMal">MAL</string>
    <string name="u2a3strRbButtonNormal">NORMAL </string>
    <string name="u2a3strRbButtonBien">BIEN </string>

    <!-- U2A4 CITA MEDICA -->

    <string name="u2a4strBtnFecha">FECHA</string>
    <string name="u2a4strBtnHora">HORA</string>
    <string name="u2a4strBtnReservar">RESERVAR</string>


</resources>